# test-azure-mcp-chat

./: ARCHITECTURE.md  DURABLE_FUNCTIONS_MIGRATION_PLAN.md  index.html  pyproject.toml  redeploy-app.sh  requirements.txt  set-env-vars.sh  set-runscript.sh
.github/: copilot-instructions.md
ado-pipelines/: destroy.yml  main.yml  variables.yml
app/: agent.py  auth.py  auth_routes.py  index.html  pyproject.toml  requirements.txt
functions/: function_app.py  host.json  requirements.txt
infrastructure/: ai_foundry.tf  app.tf  frontend.tf  keyvault.tf  locals.tf  mcp.tf  namep.tf  openai.tf  outputs.tf  provider.tf  resources.tf  variables.tf
